adlatus-ci-cd/cd/deploy/base/modules/config-server/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
  namespace: adl
spec:
  template:
    spec:
      containers:
        - name: config-server
          ports:
            - $patch: replace
            - containerPort: 8888
      imagePullSecrets:
        - name: docker-regcred
