adlatus-ci-cd/cd/deploy/base/modules/config-server/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
  namespace: adl
spec:
  $patch: replace
  selector:
    app: config-server
  ports:
    - $patch: replace
    - port: 8888
      targetPort: 8888
