adlatus-ci-cd/cd/deploy/base/modules/config-server/patches/ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-server-ingress
  namespace: adl
